--- a/app/views/inicio.scala.html
+++ b/app/views/inicio.scala.html
@@ -18,6 +18,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
+                    <li><a href="/diretor">Diretores</a></li>
                     <li><a href="/sobre">Sobre o sistema</a></li>
                     <li><a href="/play">Sobre o Play Framework</a></li>
                     <li><a href="http://getbootstrap.com/">Sobre o Bootstrap</a></li>
