--- a/app/views/filme.scala.html
+++ b/app/views/filme.scala.html
@@ -68,6 +68,32 @@
                 }
             </tfoot>
         </table>
+        <br/>
+        <br/>
+        @helper.form(action = routes.FilmeCRUD.upload(), 'enctype -> "multipart/form-data"){
+        <table class="table table-striped table-bordered" cellpadding="0" cellspacing="0" border="0" width="100%">
+            <tr>
+                <th>Escolha o filme</th>
+                <td>
+                    <select name="filmeId" > @for(filme <- filmes) {
+                        <option value="@filme.id">@filme.id - @filme.nome</option>
+                    }
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <th>Escolha uma imagem para fazer upload:</th>
+                <td>
+                    <input type="file" name="picture" class="form-control">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <input type="submit" class="btn btn-primary" value="Enviar imagem">
+                </td>
+            </tr>
+        </table>
+        }
     </div>
     <center>
         <div
